--- a/public/css/app.css
+++ b/public/css/app.css
@@ -5,8 +5,74 @@
 }
 
 /* ^style morad */
+.nav_m {
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    background-color: #ffffff;
+    color: black;
+    height: 8vh;
+    font-weight: bold;
+}
+
+.nav_m a {
+    text-decoration: none;
+}
+
+.array_m {
+    color: #6d48e5;
+    text-decoration: none;
+    font-weight: bold;
+    display: flex;
+
+}
+
+.nav2_m {
+    width: 50vw;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+}
+
+.button_m {
+    border-radius: 3px;
+    height: 30px;
+    width: 10vw;
+}
+
+.button_m a {
+    text-decoration: none;
+    color: white;
+}
+
+.button2_m {
+    border-radius: 5px;
+    height: 6vh;
+    width: 15vw;
+    color: white;
+}
+
+.section_m {
+    text-align: center;
+    height: 80vh;
+
+}
+
+.section_m h3 {
+    color: grey;
+}
+
+.section_m h1 {
+    color: rgb(74, 73, 73);
+}
+
+.image_morad {
+    width: 50vw;
+    margin-top: 30px;
+}
 
 /* ^end style morad */
+
 
 /* !style yahia */
 
