update my section

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -208,7 +208,8 @@
     display: flex;
     justify-content: space-evenly;
     align-items: center;
-    padding-top: 4%;
+    margin-top: 4%;
+    margin-bottom: 4%;
 }
 
 .icon img {
