--- a/public/css/app.css
+++ b/public/css/app.css
@@ -155,12 +155,14 @@
 /* *section achraf 1 */
 .container {
     background-color: #6d48e5;
-    height: 50vh;
+    height: 60vh;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: space-evenly;
     color: white;
+    margin-top: 4%;
+    margin-bottom: 4%;
 }
 
 .h_p {
