--- a/public/css/app.css
+++ b/public/css/app.css
@@ -87,6 +87,7 @@
 
 .text_1_y {
     margin-top: 60px;
+    text-align: center;
 }
 
 .first_part {
@@ -105,6 +106,9 @@
     justify-content: space-evenly;
 }
 
+.parts_y{
+    text-align: center;
+}
 .parts_y img {
     width: 60px;
 }
@@ -117,6 +121,7 @@
     justify-content: center;
     justify-content: space-evenly;
     font-size: 20px;
+
 }
 
 .part_1 {
@@ -146,6 +151,9 @@
     flex-direction: column;
     justify-content: space-evenly;
     height: 80%;
+}
+.titre_y{
+    text-align: center;
 }
 
 /* !end style yahia */
