--- a/public/css/app.css
+++ b/public/css/app.css
@@ -17,6 +17,11 @@
 
 .nav_m a {
     text-decoration: none;
+    font-weight: bold;
+}
+
+.nav_m a:hover{
+    color: #6d48e5;
 }
 
 .array_m {
@@ -24,7 +29,7 @@
     text-decoration: none;
     font-weight: bold;
     display: flex;
-
+    transition: 1s;
 }
 
 .nav2_m {
@@ -43,6 +48,11 @@
 .button_m a {
     text-decoration: none;
     color: white;
+    transition: 0.5s;
+}
+
+.button_m a:hover{
+    color: #0e052d;
 }
 
 .button2_m {
@@ -50,6 +60,7 @@
     height: 6vh;
     width: 15vw;
     color: white;
+    font-weight: bold;
 }
 
 .section_m {
@@ -198,11 +209,50 @@
 
 .pourcentage_1 h1 {
     font-size: 50px;
+    animation: aaa 4s infinite alternate-reverse;
+}
+
+@keyframes aaa{
+    0%{
+        font-size: 50px ;
+    }
+    25%{
+        font-size: 62px ;
+    }
+    50%{
+        font-size: 64px ;
+    }
+    75%{
+        font-size: 62px ;
+    }
+    100%{
+        font-size: 50px ;
+    }
 }
 
 .pourcentage_1 p {
     font-size: 10px;
+    animation: aaaa 4s infinite alternate-reverse;
 }
+
+@keyframes aaaa{
+    0%{
+        font-size: 10px ;
+    }
+    25%{
+        font-size: 12px ;
+    }
+    50%{
+        font-size: 14px ;
+    }
+    75%{
+        font-size: 12px ;
+    }
+    100%{
+        font-size: 10px ;
+    }
+}
+
 
 .container>a {
     text-decoration: none;
@@ -317,7 +367,7 @@ button {
 .nav_footer p {
     font-size: small;
     color: gray;
-    padding-left: 210px;
+    padding-left: 215px;
 }
 
 .links_footer {
